[package]
name = "examples"
version = "0.0.0"
publish = false
authors = ["Renkai <gaelookair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustracing = "0.4.0"
rustracing_jaeger = "0.4.1"
tracing = "0.1.13"
crossbeam-channel = "0.4"
tracing-rustracing = {path = "../tracing-rustracing", version = "0.1.0"}
tracing-subscriber = {version = "0.2.4", features = ["json", "chrono"] }
