[package]
name = "tracing-rustracing"
version = "0.1.0"
authors = ["Renkai <gaelookair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustracing = "0.4.0"
rustracing_jaeger = "0.4.1"
tracing = "0.1.13"
tracing-core = "0.1.2"
crossbeam-channel = "0.4"
tracing-subscriber = {version = "0.2", default-features = false, features = ["registry"] }
